--- a/pagamento.html
+++ b/pagamento.html
@@ -32,7 +32,7 @@
                             </label>
                           </div>
                         <input type="text" name="numero do cartao" placeholder="" disabled id="totalCard">
-                      <a href="faleconosco.html">  <input type="button" value="concluir"> </a>
+                      <a href="concluido.html">  <input type="button" value="concluir"> </a>
 
                     </div>
                 </div>
@@ -50,7 +50,7 @@
                         </div>
                         <input type="text"  disabled id="totalPrazo">
                         <input type="number" id="parcela" placeholder="parcelas" style="width: 15%;" min="1" max="3">
-                        <input type="button" value="concluir">
+                        <a href="concluido.html"> <input type="button" value="concluir"> </a>
                     </div>
                 </div>
             </div>
